# SimulCol

./: CMakeLists.txt  README.md  main.cpp  report.md
data/: geogebra_c3ga_template.html
include/: Cube.hpp  FreeflyCamera.hpp  Program.hpp  Shader.hpp  Sphere.hpp  TrackballCamera.hpp  c3gaTools.hpp  common.hpp
shaders/: 3D.vs.glsl  normals.fs.glsl
src/: Cube.cpp  FreeflyCamera.cpp  Program.cpp  Shader.cpp  Sphere.cpp  TrackballCamera.cpp
